# bazi_agent

./: .env.example  DEMO_GUIDE.md  README.md  convert_md_to_word.py  convert_to_pdf.py  demo_test.py  extract_pdf.py  pyproject.toml  requirements.txt  start.bat  start.sh  test_simple.py  test_workflow.py  test_workflow_timeout.py
.claude/: settings.json  settings.local.json
data/: test_complete.json  test_run.json
data/memory/: conv_test_user_a25e8f3a.json  conv_web_user_a7d881f2.json  default_20260315215605_284ff084.json  default_20260315222710_7fa3c8d9.json  (+24 more)
plans/: changelog-v0.2.1.md  configuration-extension-strategy.md  image-resource-management-strategy.md  interview-deep-dive.md  interview-prep.md  interview-script-part1-intro-tech.md  interview-script-part2-architecture-langgraph.md  interview-script-part3-agent-rag.md  interview-script-part4-ha-ratelimit-cache.md  interview-script-part5-disaster-consistency-concurrency.md  interview-script-part6-testing-qa.md  interview-test-script.md  knowledge-base-building-process.md  multimodal-vector-storage-design.md  optimization-report-2026-03-07.md  p0-enterprise-middleware.md  startup-guide.md  tarot-agent-specification.md  tarot-implementation-roadmap.md  tarot-multimodal-architecture.md  tech-architecture-overview.md  tech-upgrade-plan-v0.3.0.md  tech-upgrade-plan.md
scripts/: generate_alpaca_data.py  generate_training_data.py  iew_dedup_report.py  setup_knowledge_base.py  verify_setup.sh  verify_structure.py
src/: __init__.py  dependencies.py  logging_config.py  main.py
static/: index.html
(+107 files in other folders)
